--- a/views/client-invoice.ejs
+++ b/views/client-invoice.ejs
@@ -79,9 +79,9 @@
             </div>
           </div>
         </div>
-        <div class="col-7 p-4">
+        <div class="col-7">
           <div
-            class="card mt-4"
+            class="card mt-4 p-4"
             style="background-color: rgb(248, 246, 218); border-radius: 10px"
           >
             <table class="table table-striped table-bordered border-primary">
@@ -105,15 +105,15 @@
             </table>
           </div>
         </div>
-        <div class="col-7 p-4">
+        <div class="col-7">
           <div
-            class="card mt-4"
+            class="card mt-4 p-4"
             style="background-color: rgb(248, 246, 218); border-radius: 10px"
           >
             <textarea
               name="note"
               id="note"
-              class="form-control"
+              class="form-control p-4"
               cols="30"
               rows="4"
               type="text"
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-      <div class="row justify-content-center mt-4">
+      <div class="row justify-content-center mt-4 p-4">
         <div
           class="col-7 pt-5 pb-5 bg-warning text-white"
           style="
@@ -133,9 +133,19 @@
           "
         >
           <div class="row">
-            <div class="col-8" id="total">
-              <h2>Total: <%= total %> VND</h2>
+            <div class="col-12" id="total">
+              <h2>Tổng cộng: <%= total %> VND</h2>
             </div>
+            <% if(total > 500000) { %>
+
+            <div class="col-12" id="total">
+              <h4>
+                Hóa đơn lớn hơn 500000VND, bạn sẽ được miễn chi phí vận chuyển
+                !!!
+              </h4>
+            </div>
+
+            <% } %>
           </div>
         </div>
       </div>
