--- a/views/client-foods.ejs
+++ b/views/client-foods.ejs
@@ -17,7 +17,7 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-              Đồ <strong><span class="text-warning">ăn</span></strong>
+              <strong><span class="text-warning">Đồ ăn</span></strong>
               </h1>
             </div>
           </div>
@@ -52,9 +52,9 @@
                 </div>
                 <div class="col-6 border-left mt-1">
                   <h2><%= food.name %></h2>
-                  <div class="mt-1 mb-1 spec-1"><h3>Type: <%= food.type %></h3></div>
+                  <div class="mt-1 mb-1 spec-1"><h3>Loại: <%= food.type %></h3></div>
                   <p class="text-justify h3 para mb-0 text-truncate">
-                    Description: <%= food.description%>
+                    Mô tả: <%= food.description%>
                   </p>
                 </div>
                 <div class="align-items-center align-content-center col-md-3 border-left mt-1">
