--- a/views/client-cart.ejs
+++ b/views/client-cart.ejs
@@ -13,92 +13,125 @@
 
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-8>
-      <div class="card mt-4">
-        <% if (productList != '') { %> <% productList.forEach(function(product, index){ %>
-        <div class="card-body">
-          <div class="row rounded">
-            <div class="col-md-3">
-              <img
-                class="img-fluid img-responsive rounded product-image"
-                id="product"
-                src="<%= product.image_url %>"
-              />
-            </div>
-            <div class="col-md-6 border-left mt-1">
-              <h1><%= product.name %></h1>
-              <div class="mt-1 mb-1 spec-1"><h4>Loại: <%= product.type %></h4></div>
-              <p class="text-justify para mb-0 text-truncate h3">
-                Mô tả: <%= product.description %>
-              </p>
-            </div>
-            <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-              <div class="d-flex flex-row">
-                <h2 class="mr-1"><%= product.price %> VND</h2>
+      <div class="col-7">
+        <div class="card mt-4" style="background-color: rgb(255, 250, 197); border-radius: 10px">
+          <% if (productList != '') { %> <% productList.forEach(function(product, index){ %>
+          <div class="card-body p-5">
+            <div class="row rounded">
+              <div class="col-md-3">
+                <img
+                  class="img-fluid img-responsive rounded product-image"
+                  id="product"
+                  src="<%= product.image_url %>"
+                />
               </div>
-              <div class="d-flex flex-column mt-4">
-                <!-- <a href="#" class="btn btn-warning btn-sm">Update</a> -->
-                <form action="/remove/<%= product._id %>" method="POST" class="d-flex flex-column">
-                  <input
-                    type="number"
-                    name="quantity"
-                    id="quantity"
-                    min="0"
-                    max="100"
-                    step="1"
-                    class="h2"
-                    style="
-                      background-color: rgb(182, 241, 159);
-                      border: 2px solid rgb(104, 250, 124);
-                    "
-                    value="<%= dpProduct[index].count %>"
-                  />
-                  <button class="btn btn-outline-danger btn-md mt-2" type="submit">
-                    <h3>Loại bỏ</h3>
-                  </button>
-                </form>
+              <div class="col-md-6 border-left mt-1">
+                <h1><%= product.name %></h1>
+                <div class="mt-1 mb-1 spec-1"><h4>Type: <%= product.type %></h4></div>
+                <p class="text-justify para mb-0 text-truncate h3">
+                  Description: <%= product.description %>
+                </p>
+              </div>
+              <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                <div class="d-flex flex-row">
+                  <h2 class="mr-1"><%= product.price %> VND</h2>
+                </div>
+                <div class="d-flex flex-column mt-4">
+                  <!-- <a href="#" class="btn btn-warning btn-sm">Update</a> -->
+                  <form
+                    action="/update-cart/<%= product._id %>"
+                    method="POST"
+                    class="d-flex flex-column"
+                    id="update"
+                    name="update"
+                  >
+                    <input
+                      type="number"
+                      name="quantity_<%= product._id %>"
+                      id="quantity_<%= product._id %>"
+                      min="0"
+                      max="100"
+                      step="1"
+                      class="h2"
+                      style="
+                        background-color: rgb(182, 241, 159);
+                        border: 2px solid rgb(104, 250, 124);
+                      "
+                      value="<%= cart.product_obj[index].count %>"
+                      onchange="myFunction('<%= cart.product_obj[index].product_id %>')"
+                    />
+                    <input
+                      type="hidden"
+                      name="quantity"
+                      id="quantity"
+                      value="<%= cart.product_obj[index].count %>"
+                    />
+                  </form>
+                  <a
+                    href="/remove-cart/<%= cart.product_obj[index].product_id %>/<%= cart._id %>"
+                    class="btn btn-outline-danger btn-md mt-2"
+                    type="submit"
+                  >
+                    <h3>Remove</h3>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-
-        <% }) %> <% } else { %>
-        <h4>Không tìm thấy</h4>
-        <% } %>
-      </div>
-    </div>
-  </div>
-
-  <div class="row justify-content-center mt-4">
-    <div class="col-7 pt-5 pb-5 bg-warning text-white">
-      <div class="row">
-        <div class="col-8">
-          <h2>Tổng cộng: <%= total %> VND</h2>
+          <% }) %> <% } else { %>
+          <h4>No item found</h4>
+          <% } %>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="row justify-content-center">
-    <div class="col-7 pt-5 pb-5">
-      <div class="row">
-        <div class="col-4 text-center">
-          <a class="btn btn-danger" href="/client"><h3>Tiếp tục mua!!</h3></a>
+    <div class="row justify-content-center mt-4">
+      <div class="col-7 pt-5 pb-5 bg-warning text-white">
+        <div class="row">
+          <div class="col-8" id="total">
+            <h2>Total: <%= total %> VND</h2>
+          </div>
         </div>
-        <div class="col-4 text-center">
-          <form action="/update-cart">
-            <a type="submit" class="btn btn-info" href="/pay/#"><h3>Cập nhật giỏ hàng</h3></a>
-          </form>
-        </div>
-        <div class="col-4 text-center">
-          <a class="btn btn-primary" href="/pay"><h3>Thanh toán</h3></a>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-12 pt-5 pb-5">
+        <div class="row justify-content-center">
+          <div class="col-4 text-right">
+            <a class="btn btn-danger" href="/client"><h3>Continute to Shopping!!</h3></a>
+          </div>
+          <div class="col-4 text-left">
+            <a class="btn btn-primary" href="/create-invoice/<%= cart._id %>"
+              ><h3>Make the invoice</h3></a
+            >
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-<!-- #/ container -->
-<!--**********************************
+  <script>
+    function myFunction(id) {
+      const num = document.getElementById('quantity_' + id).value;
+      // var ajax = new XMLHttpRequest();
+      // var data = {
+      //   product_id: id,
+      //   count: num,
+      // };
+      // var formdata = new FormData(data);
+      // ajax.open('POST', '/update-cart', true);
+      // ajax.send(formdata);
+      document.forms['update']['quantity'].setAttribute('value', num);
+      document.forms['update']['quantity'].setAttribute('value', num);
+      const url = '/update-cart/' + id;
+      document.forms['update'].setAttribute('action', url);
+      document.getElementById('update').submit();
+      // document.getElementById('total').innerHTML =
+      //   '<h2>Total: <%= total %> VND</h2>' + id + ' ' + num;
+    }
+  </script>
+  <!-- #/ container -->
+  <!--**********************************
                   Content body end
       ***********************************-->
+</div>
